--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+<link rel="stylesheet" type="text/css" href="./css/main.css">
 <title>LAMOR</title>
-<img src='/static/img/header_small.png', width=960px />
+<img src='./img/header_small.png', width=960px />
 
 <br/>
 
@@ -18,7 +18,7 @@
 
 <body>
 <div id="home">
-<img id="home_image" src='/static/img/home_image.jpg', width=960px/>
+<img id="home_image" src='./img/home_image.jpg', width=960px/>
 </div>
 </body>
 
