--- a/research.html
+++ b/research.html
@@ -1,18 +1,18 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+<link rel="stylesheet" type="text/css" href="./css/main.css">
 <title>LAMOR</title>
-<img src='/static/img/header_small.png', width=960px />
+<img src='./img/header_small.png', width=960px />
 
 <br/>
 
 <div id="nav">
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_here" href = "http://165.132.26.242/research/">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/member/">Member</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/publication/">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/gallary/">Gallary</a></li>
+		<li class="navi"><a class="navi_here" href = "#">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "member.html">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "publication.html">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "gallary.html">Gallary</a></li>
 	</ul>
 </div>
 
