--- a/gallary.html
+++ b/gallary.html
@@ -9,7 +9,7 @@
 <div id="nav">
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/research/">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "./research">Research</a></li>
 		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/member/">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/publication/">Publication</a></li>
 		<li class="navi"><a class="navi_here" href = "http://165.132.26.242/gallary/">Gallary</a></li>
