--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <div id="nav">
 	<ul id="navbar">
 		<li class="navi"><a class="navi_here" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "./research.html">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/member/">Member</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/publication/">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "http://165.132.26.242/gallary/">Gallary</a></li>
+		<li class="navi"><a class="navi_other" href = "research">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "./member.html">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "./publication.html">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "./gallary.html">Gallary</a></li>
 	</ul>
 </div>
 
