--- a/research/index.html
+++ b/research/index.html
@@ -10,9 +10,9 @@
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_here" href = "#">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "member.html">Member</a></li>
-		<li class="navi"><a class="navi_other" href = "publication.html">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "gallary.html">Gallary</a></li>
+		<li class="navi"><a class="navi_other" href = "member">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "publication">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "gallary">Gallary</a></li>
 	</ul>
 </div>
 
