--- a/publication/index.html
+++ b/publication/index.html
@@ -1,18 +1,18 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="./css/main.css">
+<link rel="stylesheet" type="text/css" href=./css/main.css">
 <title>LAMOR</title>
-<img src='./img/header_small.png', width=960px />
+<img src=./img/header_small.png', width=960px />
 
 <br/>
 
 <div id="nav">
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
-		<li class="navi"><a class="navi_other" href = "research">Research</a></li>
-		<li class="navi"><a class="navi_other" href = "member">Member</a></li>
-		<li class="navi"><a class="navi_here" href = "publication">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "gallary">Gallary</a></li>
+		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "/member">Member</a></li>
+		<li class="navi"><a class="navi_here" href = "/publication">Publication</a></li>
+		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
 	</ul>
 </div>
 
