--- a/publication/index.html
+++ b/publication/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href=/css/main.css">
+<link rel="stylesheet" type="text/css" href="/css/main.css">
 <title>LAMOR</title>
-<img src=/img/header_small.png', width=960px />
+<img src='/img/header_small.png', width=960px />
 
 <br/>
 
