--- a/member/index.html
+++ b/member/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 <title>LAMOR</title>
-<img src='/img/header_small.png', width=960px />
+<img src='../img/header_small.png', width=960px />
 
 <br/>
 
@@ -10,6 +10,7 @@
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
 		<li class="navi"><a class="navi_here" href = "/member">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
 		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
@@ -19,45 +20,18 @@
 <body>
 <div id="nav2">
 	<ul id="navbar2">
-		<li ><a class="navi2_here" href = "/member">Professor</a></li>
-		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
+		<li ><a class="navi2_here" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. student</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
-<div id="professor">
+<div id="people">
 	<div id="people_photo">
-		<img src='./../img/people/sanghunpark.jpg'>
+
 	</div>
 	<div id="description">
-		<p>
-			<b>Professor<br/>
-			Name: Sanghun Park<br/>
-			Email: pshun@yonsei.ac.kr<br/>
-			Room: Science Hall #537</b><br/>
-		<p/>
-		<p>
-			<b>Research Interest</b><br/>
-			&#8226; Numerical Modeling<br/>
-			&#8226; Mesoscale meteorology<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; Ph.D. (2009) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; M.S. (2001) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (1999) in Astro and Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		<p>
-			<b>Research Experiences</b><br/>
-			&#8226;2014-2017: Project Scientist 1, National Center for Atmospheric Research, Boulder, CO, USA<br/>
-			&#8226;2013-2013: Postdoctoral Fellow, Earth System Laboratory, National Center for Atmospheric<br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			Research, Boulder, CO, USA<br/>
-			&#8226;2011-2012: Advanced Study Program (ASP), National Center for Atmospheric Research, Boulder, <br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			CO, USA
-		<p/>
+
 	</div>
 </div>
 </body>
