--- a/publication/index.html
+++ b/publication/index.html
@@ -10,6 +10,7 @@
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
+		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
 		<li class="navi"><a class="navi_other" href = "/member">Member</a></li>
 		<li class="navi"><a class="navi_here" href = "/publication">Publication</a></li>
 		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
