--- a/Professor/index.html
+++ b/Professor/index.html
@@ -10,8 +10,8 @@
 	<ul id="navbar">
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
-		<li class="navi"><a class="navi_here" href = "Professor">Professor</a></li>
-		<li class="navi"><a class="navi_other" href = "/member">Member</a></li>
+		<li class="navi"><a class="navi_here" href = "/Professor">Professor</a></li>
+		<li class="navi"><a class="navi_other" href = "/member/researcher">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
 		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
 	</ul>
