--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -11,7 +11,7 @@
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_other" href = "/research">Research</a></li>
 		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
-		<li class="navi"><a class="navi_here" href = "/member">Member</a></li>
+		<li class="navi"><a class="navi_here" href = "/member/researcher">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
 		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
 	</ul>
@@ -28,7 +28,7 @@
 </div>
 <div id="people">
 	<div id="people_photo">
-
+		<img>
 	</div>
 	<div id="description">
 
