--- a/research/index.html
+++ b/research/index.html
@@ -11,7 +11,7 @@
 		<li class="navi"><a class="navi_other" href = "/">Home</a></li>
 		<li class="navi"><a class="navi_here" href = "/research">Research</a></li>
 		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
-		<li class="navi"><a class="navi_other" href = "/member">Member</a></li>
+		<li class="navi"><a class="navi_other" href = "/member/researcher">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
 		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
 	</ul>
