--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -1,8 +1,8 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="../css/main.css">
+<link rel="stylesheet" type="text/css" href="../../css/main.css">
 <title>LAMOR</title>
-<img src='../img/header_small.png', width=960px />
+<img src='../../img/header_small.png', width=960px />
 
 <br/>
 
@@ -26,12 +26,57 @@
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
-<div id="people">
-	<div id="people_photo">
-		<img>
+<div id="postdoc">
+	<p class="title"><b>Postdoctoral Fellow</b> <p/>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/shinuju.png'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Uju Shin<br/>
+			Email: shinuju@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Mesocale Convective System<br/>
+			&#8226; Heavy Precipitation Systems over the Korean Pennisular<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; Ph.D. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; M.S. (2010) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2008) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>
+		<p>
+			<b>Research Experiences</b><br/>
+			&#8226;2019~Present, Postdoctoral Fellow, Yonsei University, Seoul, Korea
+		<p/>			
+		</div>
 	</div>
-	<div id="description">
-
+</div>
+<div id="intern">
+	<p class="title"><b>Research Intern</b> <p/>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/yongro.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Yongro Yun<br/>
+			Email: 2015136012@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2015~present, B.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>
+		</div>
 	</div>
 </div>
 </body>
