--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -26,59 +26,28 @@
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
-<div id="postdoc">
-	<p id="coarse_title"><b>Postdoctoral Fellow</b> <p/>
+<div id="master">
 	<div id="people">
 		<div id="people_photo">
-			<img src='./../../img/people/shinuju.png'>
+			<img src='./../../img/people/khj.jpg'>
 		</div>
 		<div id="description">
 		<p>
-			<b>Name: Uju Shin<br/>
-			Email: shinuju@yonsei.ac.kr<br/>
+			<b>Name: Hyejin Kim<br/>
+			Email: haejin0828@navr.com<br/>
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
 			<b>Research Interest</b><br/>
-			&#8226; Mesocale Convective System<br/>
-			&#8226; Heavy Precipitation Systems over the Korean Pennisular<br/>
+			&#8226; Estimation of aersol optical depth from chemical transport model<br/>
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; Ph.D. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; M.S. (2010) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2008) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		<p>
-			<b>Research Experiences</b><br/>
-			&#8226;2019~Present, Postdoctoral Fellow, Yonsei University, Seoul, Korea
-		<p/>			
+			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+		<p/>		
 		</div>
 	</div>
-</div>
-<div id="intern">
-	<p id="coarse_title"><b>Research Intern</b> <p/>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/yongro.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Yongro Yun<br/>
-			Email: 2015136012@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
-		<p/>
-		<p>
-			<b>Research Interest</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		</div>
-	</div>
-</div>
 </body>
 
 <footer>
