--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -57,7 +57,7 @@
 	</div>
 </div>
 <div id="intern">
-	<p style="	font-family:arial; font-size:30px;"><b>Research Intern</b> <p/>
+	<p id="coarse_title"><b>Research Intern</b> <p/>
 	<div id="people">
 		<div id="people_photo">
 			<img src='./../../img/people/yongro.jpg'>
