--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -34,7 +34,7 @@
 		<div id="description">
 		<p>
 			<b>Name: Hyejin Kim<br/>
-			Email: haejin0828@navr.com<br/>
+			Email: haejin0828@naver.com<br/>
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
@@ -45,6 +45,96 @@
 			<b>Education</b><br/>
 			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/rsw.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Seungwoo Ryu<br/>
+			Email: swryu@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Physics, The Catholic University of Korea, Bucheon, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/kimjy.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Jae Youp Kim<br/>
+			Email: kimjy.par@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
+			&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
+		<p/>	
+		<p>
+			<b>Research Experiences</b><br/>
+			&#8226; 2015~2019, Research Assistant, Korea Institute of Science and Technology Information, <br/>
+			Daejeon, Korea<br/>
+		<p/>			
+		</div>
+	</div>
+		<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/binpyo.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Inpyo Park<br/>
+			Email: binpyo@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/jspark.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Joonsung Park<br/>
+			Email: ippjs@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interest</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
 	</div>
