--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -20,10 +20,10 @@
 <body>
 <div id="nav2">
 	<ul id="navbar2">
-		<li ><a class="navi2_here" href = "/member/researcher">Researcher</a></li>
+		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. student</a></li>
-		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
+		<li ><a class="navi2_here" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
 <div id="postdoc">
