--- a/Professor/index.html
+++ b/Professor/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <title>LAMOR</title>
-<img src='/img/header_small.png', width=960px />
+<a id="header_image" href="/"><img src='/img/header_small.png', width=960px /></a>
 
 <br/>
 
@@ -13,7 +13,7 @@
 		<li class="navi"><a class="navi_here" href = "/Professor">Professor</a></li>
 		<li class="navi"><a class="navi_other" href = "/member/researcher">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
+		<li class="navi"><a class="navi_other" href = "/news">News</a></li>
 	</ul>
 </div>
 
