--- a/member/phd/index.html
+++ b/member/phd/index.html
@@ -2,9 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../../css/main.css">
 <title>LAMOR</title>
-<img src='../../img/header_small.png', width=960px />
-
-<br/>
+<a id="header_image" href="/"><img src='../../img/header_small.png', width=960px /></a>
 
 <div id="nav">
 	<ul id="navbar">
@@ -13,7 +11,7 @@
 		<li class="navi"><a class="navi_other" href = "/Professor">Professor</a></li>
 		<li class="navi"><a class="navi_here" href = "/member/researcher">Member</a></li>
 		<li class="navi"><a class="navi_other" href = "/publication">Publication</a></li>
-		<li class="navi"><a class="navi_other" href = "/gallary">Gallary</a></li>
+		<li class="navi"><a class="navi_other" href = "/news">News</a></li>
 	</ul>
 </div>
 
