--- a/research/index.html
+++ b/research/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
 <link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="shortcut icon" href="./../img/favicon.ico">
 <title>LAMOR</title>
 <a id="header_image" href="/"><img src='/img/header_small.png', width=960px /></a>
 
