--- a/Professor/index.html
+++ b/Professor/index.html
@@ -31,7 +31,7 @@
 			Room: Science Hall #537</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Numerical Modeling<br/>
 			&#8226; Mesoscale meteorology<br/>
 		<p/>
