--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -43,7 +43,7 @@
 			Email: ocm@yonsei.ac.kr</b><br/>
 		</p>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		</p>
 		<p>
