--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -37,7 +37,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Estimation of aersol optical depth from chemical transport model<br/>
 		<p/>
 		<p>
@@ -58,7 +58,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		<p/>
 		<p>
@@ -79,7 +79,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		<p/>
 		<p>
@@ -106,7 +106,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		<p/>
 		<p>
@@ -127,7 +127,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		<p/>
 		<p>
