--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -40,7 +40,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Mesocale Convective System<br/>
 			&#8226; Heavy Precipitation Systems over the Korean Pennisular<br/>
 		<p/>
@@ -70,7 +70,7 @@
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
-			<b>Research Interest</b><br/>
+			<b>Research Interests</b><br/>
 			&#8226; Atmospheric Modeling<br/>
 		<p/>
 		<p>
