--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -44,7 +44,7 @@
 		</p>
 		<p>
 			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
+			&#8226; Heavy rainfall system in summer season<br/>
 		</p>
 		<p>
 			<b>Education</b><br/>
@@ -53,10 +53,6 @@
 		</p>
 		</div>
 	</div>
-</div>
-<div id="intern">
-	<p id="coarse_title"><b>Research Intern</b> <p/>
-
 </div>
 </body>
 
