--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -38,7 +38,7 @@
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
-			&#8226; Estimation of aersol optical depth from chemical transport model<br/>
+			&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
 		<p/>
 		<p>
 			<b>Education</b><br/>
