--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -31,7 +31,7 @@
 	<p id="coarse_title"><b>Postdoctoral Fellow</b> <p/>
 	<div id="people">
 		<div id="people_photo">
-			<img src='./../../img/people/shinuju.png'>
+			<img src='./../../img/people/default.png'>
 		</div>
 		<div id="description">
 		<p>
