--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -51,6 +51,12 @@
 			&#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2009) in Militrary Strategy, Korea Airforce Academy, Cheongju, Korea<br/>
 		</p>
+		<p>
+		    <b>Thesis</b><br/>
+			&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/ocm_thesis.pdf" download><i>Comparison on characteristic of heavy rainfall system <br/>
+ 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			-Case study in Jun 2018 and Aug 2018-</i></a>
+		</p>
 		</div>
 	</div>
 </div>
