update intern tab

--- a/Professor/index.html
+++ b/Professor/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="/css/main.css">
+<link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="shortcut icon" href="./../img/favicon.ico">
 <title>LAMOR</title>
-<a id="header_image" href="/"><img src='/img/header_small.png', width=960px /></a>
+<a id="header_image" href="/"><img src='../img/header_small.png', width=960px /></a>
 
 <br/>
 
@@ -43,7 +43,7 @@
 		<p/>
 		<p>
 			<b>Research Experiences</b><br/>
-			&#8226;2014-2017: Project Scientist 1, National Center for Atmospheric Research, Boulder, CO, USA<br/>
+			&#8226;2014-2017: Project Scientist, National Center for Atmospheric Research, Boulder, CO, USA<br/>
 			&#8226;2013-2013: Postdoctoral Fellow, Earth System Laboratory, National Center for Atmospheric<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			Research, Boulder, CO, USA<br/>
