--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -21,13 +21,13 @@
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
-		<li ><a class="navi2_here" href = "/member/ms">M.S. Student</a></li>
-		<li ><a class="navi2_other" href = "/member/us">B.S. Course</a></li>
+		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
+		<li ><a class="navi2_here" href = "/member/us">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
 <div id="intern">
-	<p id="coarse_title"><b>Research Intern</b> <p/>
+	<p id="coarse_title"><b>Undergradate Student</b> <p/>
 	<div id="people">
 		<div id="people_photo">
 			<img src='./../../img/people/yongro.jpg'>
@@ -49,6 +49,7 @@
 		</div>
 	</div>
 </div>
+</body>
 
 <footer>
 <div id="address">
