--- a/member/phd/index.html
+++ b/member/phd/index.html
@@ -21,7 +21,8 @@
 	<ul id="navbar2">
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_here" href = "/member/phd">Ph.D. Candidate</a></li>
-		<li ><a class="navi2_other" href = "/member/ms">M.S. student</a></li>
+		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
+		<li ><a class="navi2_other" href = "/member/us">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
