--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="./css/main.css">
 <link rel="shortcut icon" href="./img/favicon.ico">
 <title>LAMOR</title>
+<meta name="google-site-verification" content="OYmYDKn4KyCj0wurh0KpBE4oLzl1tdfcHEgy5FahDyM" />
 <a id="header_image" href="/"><img src='./img/header_small.png', width=960px /></a>
 
 <br/>
