--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -23,7 +23,8 @@
 	<ul id="navbar2">
 		<li ><a class="navi2_here" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
-		<li ><a class="navi2_other" href = "/member/ms">M.S. student</a></li>
+		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
+		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
@@ -57,29 +58,7 @@
 		</div>
 	</div>
 </div>
-<div id="intern">
-	<p id="coarse_title"><b>Research Intern</b> <p/>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/yongro.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Yongro Yun<br/>
-			Email: 2015136012@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		</div>
-	</div>
-</div>
+
 </body>
 
 <footer>
