--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -26,16 +26,36 @@
 		<li ><a class="navi2_other" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
-<div id="intern">
-	<p id="coarse_title"><b>Research Intern</b> <p/>
+<div id="master">
 	<div id="people">
 		<div id="people_photo">
-			<img src='./../../img/people/yongro.jpg'>
+			<img src='./../../img/people/khj.jpg'>
 		</div>
 		<div id="description">
 		<p>
-			<b>Name: Yongro Yun<br/>
-			Email: 2015136012@yonsei.ac.kr<br/>
+			<b>Name: Hyejin Kim<br/>
+			Email: haejin0828@naver.com<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Estimation of aerosol optical depth from chemical transport model<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/rsw.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Seungwoo Ryu<br/>
+			Email: swryu@yonsei.ac.kr<br/>
 			Room: Science Hall #536</b><br/>
 		<p/>
 		<p>
@@ -44,11 +64,81 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
+			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Physics, The Catholic University of Korea, Bucheon, Korea<br/>
+		<p/>		
 		</div>
 	</div>
-</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/kimjy.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Jae Youp Kim<br/>
+			Email: kimjy.par@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
+			&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
+		<p/>	
+		<p>
+			<b>Research Experiences</b><br/>
+			&#8226; 2015~2019, Research Assistant, Korea Institute of Science and Technology Information, <br/>
+			Daejeon, Korea<br/>
+		<p/>			
+		</div>
+	</div>
+		<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/binpyo.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Inpyo Park<br/>
+			Email: binpyo@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+	<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/jspark.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Joonsung Park<br/>
+			Email: ippjs@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2019~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>		
+		</div>
+	</div>
+</body>
 
 <footer>
 <div id="address">
