--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -22,7 +22,7 @@
 		<li ><a class="navi2_other" href = "/member/researcher">Researcher</a></li>
 		<li ><a class="navi2_other" href = "/member/phd">Ph.D. Candidate</a></li>
 		<li ><a class="navi2_other" href = "/member/ms">M.S. Student</a></li>
-		<li ><a class="navi2_other" href = "/member/us">B.S. Course</a></li>
+		<li ><a class="navi2_other" href = "/member/bs">B.S. Course</a></li>
 		<li ><a class="navi2_here" href = "/member/alumni">Alumni</a></li>
 	</ul>
 </div>
