--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -44,7 +44,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>
 		</div>
 	</div>
