--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -43,7 +43,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2018~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
 		<p/>		
 		</div>
@@ -64,7 +64,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2018~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2018~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2018) in Physics, The Catholic University of Korea, Bucheon, Korea<br/>
 		<p/>		
 		</div>
@@ -85,7 +85,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2019~present, M.S.-Ph.D. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; M.S. (2019) in Information Sciences, University of Science and Technology, Daejeon, Korea<br/>
 			&#8226; B.S. (2017) in Atmospheric Sciences, Kongju National University, Gongju, Korea<br/>
 		<p/>	
@@ -112,7 +112,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S.-Ph.D. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2019~present, M.S.-Ph.D. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
@@ -133,7 +133,7 @@
 		<p/>
 		<p>
 			<b>Education</b><br/>
-			&#8226; 2019~present, M.S. coarse in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; 2019~present, M.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 			&#8226; B.S. (2019) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
 		<p/>		
 		</div>
