--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -48,6 +48,26 @@
 		<p/>
 		</div>
 	</div>
+		<div id="people">
+		<div id="people_photo">
+			<img src='./../../img/people/minjae.jpg'>
+		</div>
+		<div id="description">
+		<p>
+			<b>Name: Min Jae Lee<br/>
+			Email: mjae0990@yonsei.ac.kr<br/>
+			Room: Science Hall #536</b><br/>
+		<p/>
+		<p>
+			<b>Research Interests</b><br/>
+			&#8226; Atmospheric Modeling<br/>
+		<p/>
+		<p>
+			<b>Education</b><br/>
+			&#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		<p/>
+		</div>
+	</div>
 </div>
 </body>
 
