change room number

--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -36,7 +36,7 @@
 		<p>
 			<b>Name: Yongro Yun<br/>
 			Email: 2015136012@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
@@ -56,7 +56,7 @@
 		<p>
 			<b>Name: Min Jae Lee<br/>
 			Email: mjae0990@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
