--- a/member/ms/index.html
+++ b/member/ms/index.html
@@ -35,7 +35,7 @@
 		<p>
 			<b>Name: Hyejin Kim<br/>
 			Email: haejin0828@naver.com<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
@@ -56,7 +56,7 @@
 		<p>
 			<b>Name: Seungwoo Ryu<br/>
 			Email: swryu@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
@@ -77,7 +77,7 @@
 		<p>
 			<b>Name: Jae Youp Kim<br/>
 			Email: kimjy.par@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
@@ -104,7 +104,7 @@
 		<p>
 			<b>Name: Inpyo Park<br/>
 			Email: binpyo@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
@@ -125,7 +125,7 @@
 		<p>
 			<b>Name: Joonsung Park<br/>
 			Email: ippjs@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
