change room number

--- a/member/researcher/index.html
+++ b/member/researcher/index.html
@@ -38,7 +38,7 @@
 		<p>
 			<b>Name: Uju Shin<br/>
 			Email: shinuju@yonsei.ac.kr<br/>
-			Room: Science Hall #536</b><br/>
+			Room: Science Hall #536B</b><br/>
 		<p/>
 		<p>
 			<b>Research Interests</b><br/>
