--- a/member/alumni/index.html
+++ b/member/alumni/index.html
@@ -35,29 +35,76 @@
 <div id="master">
 	<p id="coarse_title"><b>Master</b> <p/>
 		<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/ocm.png'>
+		    <div id="people_photo">
+			    <img src='./../../img/people/ocm.png'>
+		    </div>
+		    <div id="description">
+		    <p>
+			    <b>Name: Chimook Oh<br/>
+			    Email: ocm@yonsei.ac.kr</b><br/>
+		    </p>
+		    <p>
+			    <b>Research Interests</b><br/>
+			    &#8226; Heavy rainfall system in summer season<br/>
+		    </p>
+		    <p>
+			    <b>Education</b><br/>
+			    &#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			    &#8226; B.S. (2009) in Militrary Strategy, Korea Airforce Academy, Cheongju, Korea<br/>
+		    </p>
+		    <p>
+		        <b>Thesis</b><br/>
+			    &#8226; Master's thesis: <a class="paper" href="./../../data/thesis/ocm_thesis_2020.pdf" download><i>Comparison on characteristic of heavy rainfall system <br/>
+ 			    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			    -Case study in Jun 2018 and Aug 2018-</i></a>
+		    </p>
 		</div>
-		<div id="description">
-		<p>
-			<b>Name: Chimook Oh<br/>
-			Email: ocm@yonsei.ac.kr</b><br/>
-		</p>
-		<p>
+		<div id="people">
+		    <div id="people_photo">
+			    <img src='./../../img/people/khj.jpg'>
+		    </div>
+		    <div id="description">
+		    <p>
+			    <b>Name: Hyejin Kim<br/>
+			    Email: haejin0828@naver.com</b><br/>
+		    </p>
+		    <p>
+			    <b>Research Interests</b><br/>
+			    &#8226; Estimation of aerosol optical depth from chemical transport model<br/>
+		    </p>
+		    <p>
+			    <b>Education</b><br/>
+			    &#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+			&#8226; B.S. (2018) in Atmospheric Science, Kongju National University, Gongju, Korea<br/>
+		    </p>
+		    <p>
+		        <b>Thesis</b><br/>
+			    &#8226; Master's thesis: <a class="paper" href="./../../data/thesis/khj_thesis_2020.pdf" download><i>Aerosol Optical Depth estimated method and validation using National Institute  <br/>
+ 			    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			    of Environment Research operational numerical forecast model (WRF-CMAQ)</i></a>
+		    </p>
+		</div>
+	</div>
+</div>
+<div id="master">
+    <p id="coarse_title"><b>Intern</b> <p/>
+	    <div id="people">
+			<div id="people_photo">
+				<img src='./../../img/people/yongro.jpg'>
+			</div>
+			<div id="description">
+			<p>
+				<b>Name: Yongro Yun<br/>
+				Email: 2015136012@yonsei.ac.kr</b><br/>
+			<p/>
+			<p>
 			<b>Research Interests</b><br/>
-			&#8226; Heavy rainfall system in summer season<br/>
-		</p>
-		<p>
-			<b>Education</b><br/>
-			&#8226; M.S. (2020) in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-			&#8226; B.S. (2009) in Militrary Strategy, Korea Airforce Academy, Cheongju, Korea<br/>
-		</p>
-		<p>
-		    <b>Thesis</b><br/>
-			&#8226; Master's thesis: <a class="paper" href="./../../data/thesis/ocm_thesis.pdf" download><i>Comparison on characteristic of heavy rainfall system <br/>
- 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			-Case study in Jun 2018 and Aug 2018-</i></a>
-		</p>
+				&#8226; Atmospheric Modeling<br/>
+			<p/>
+			<p>
+				<b>Education</b><br/>
+				&#8226; B.S. (2021) in Atmospheric Science, Yonsei University, Seoul, Korea (expected)<br/>
+			<p/>
 		</div>
 	</div>
 </div>
