--- a/member/bs/index.html
+++ b/member/bs/index.html
@@ -28,45 +28,44 @@
 </div>
 <div id="intern">
 	<p id="coarse_title"><b>Undergradate Student</b> <p/>
-	<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/yongro.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Yongro Yun<br/>
-			Email: 2015136012@yonsei.ac.kr<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		</div>
-	</div>
 		<div id="people">
-		<div id="people_photo">
-			<img src='./../../img/people/minjae.jpg'>
-		</div>
-		<div id="description">
-		<p>
-			<b>Name: Min Jae Lee<br/>
-			Email: mjae0990@yonsei.ac.kr<br/>
-			Room: Science Hall #536B</b><br/>
-		<p/>
-		<p>
-			<b>Research Interests</b><br/>
-			&#8226; Atmospheric Modeling<br/>
-		<p/>
-		<p>
-			<b>Education</b><br/>
-			&#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
-		<p/>
-		</div>
+		    <div id="people_photo">
+			    <img src='./../../img/people/minjae.jpg'>
+		    </div>
+		    <div id="description">
+		    <p>
+			    <b>Name: Min Jae Lee<br/>
+			    Email: mjae0990@yonsei.ac.kr<br/>
+			    Room: Science Hall #536B</b><br/>
+		    <p/>
+		    <p>
+			    <b>Research Interests</b><br/>
+			    &#8226; Atmospheric Modeling<br/>
+		    <p/>
+		    <p>
+			    <b>Education</b><br/>
+			    &#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		    <p/>
+		    </div>
+		<div id="people">
+		    <div id="people_photo">
+			    <img src='./../../img/people/sehyun.png'>
+		    </div>
+		    <div id="description">
+		    <p>
+			    <b>Name: Se Hyun Lee<br/>
+			    Email: wwww1996@hanmail.net<br/>
+			    Room: Science Hall #536B</b><br/>
+		    <p/>
+		    <p>
+			    <b>Research Interests</b><br/>
+			    &#8226; Atmospheric Modeling<br/>
+		    <p/>
+		    <p>
+			    <b>Education</b><br/>
+			    &#8226; 2015~present, B.S. course in Atmospheric Science, Yonsei University, Seoul, Korea<br/>
+		    <p/>
+		    </div>		
 	</div>
 </div>
 </body>
